{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 94,
  "lineage": "ff33e342-6ca5-5bfe-653d-7ffb25b4041d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "health_checks_to_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Allow AWS health checks to LoadBalancer",
            "from_port": 10254,
            "id": "sgrule-2744286745",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04e4ef7f72d37b19f",
            "security_group_rule_id": "sgr-0c1d401a4716d6571",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 10254,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "internet_to_lb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTP traffic from internet to LoadBalancer",
            "from_port": 80,
            "id": "sgrule-1528196093",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04e4ef7f72d37b19f",
            "security_group_rule_id": "sgr-0528b6fc5a3666fc0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "internet_to_lb_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTPS traffic from internet to LoadBalancer",
            "from_port": 443,
            "id": "sgrule-3713081028",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04e4ef7f72d37b19f",
            "security_group_rule_id": "sgr-05795d2ca8493ee74",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodeport_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Allow NodePort access within VPC",
            "from_port": 30000,
            "id": "sgrule-2145060609",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04e4ef7f72d37b19f",
            "security_group_rule_id": "sgr-05cac883d34540ed8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.retail_app_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:596507588379:security-group/sg-04e4ef7f72d37b19f",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-04e4ef7f72d37b19f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09536079b6e54f9b5"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "retail-store-bfkv-cluster-20251120164537397900000004",
            "name_prefix": "retail-store-bfkv-cluster-",
            "owner_id": "596507588379",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-11-20",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-bfkv-cluster",
              "Owner": "AIDAYVYU7O4NYCHHW6IKK",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-11-20",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-bfkv-cluster",
              "Owner": "AIDAYVYU7O4NYCHHW6IKK",
              "Project": "retail-store"
            },
            "timeouts": null,
            "vpc_id": "vpc-0db20fc11bd80e840"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.retail_app_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:596507588379:security-group/sg-09536079b6e54f9b5",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09536079b6e54f9b5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04e4ef7f72d37b19f"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04e4ef7f72d37b19f"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04e4ef7f72d37b19f"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04e4ef7f72d37b19f"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04e4ef7f72d37b19f"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04e4ef7f72d37b19f"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "retail-store-bfkv-node-20251120164537398200000005",
            "name_prefix": "retail-store-bfkv-node-",
            "owner_id": "596507588379",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-11-20",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-bfkv-node",
              "Owner": "AIDAYVYU7O4NYCHHW6IKK",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-bfkv": "owned"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-11-20",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-bfkv-node",
              "Owner": "AIDAYVYU7O4NYCHHW6IKK",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-bfkv": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0db20fc11bd80e840"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.retail_app_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-60866690",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04e4ef7f72d37b19f",
            "security_group_rule_id": "sgr-0db0f687040d80d5d",
            "self": false,
            "source_security_group_id": "sg-09536079b6e54f9b5",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.retail_app_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-2695516440",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-09536079b6e54f9b5",
            "security_group_rule_id": "sgr-0b681ac12631b3ce9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1095539742",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09536079b6e54f9b5",
            "security_group_rule_id": "sgr-0404fbbce61048172",
            "self": false,
            "source_security_group_id": "sg-04e4ef7f72d37b19f",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1725270252",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09536079b6e54f9b5",
            "security_group_rule_id": "sgr-09e691dea051ae79f",
            "self": false,
            "source_security_group_id": "sg-04e4ef7f72d37b19f",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2945970042",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09536079b6e54f9b5",
            "security_group_rule_id": "sgr-0e5adbfc2161ecd8b",
            "self": false,
            "source_security_group_id": "sg-04e4ef7f72d37b19f",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-3167474523",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09536079b6e54f9b5",
            "security_group_rule_id": "sgr-0683e7851ac3a9edb",
            "self": false,
            "source_security_group_id": "sg-04e4ef7f72d37b19f",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-3630882960",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09536079b6e54f9b5",
            "security_group_rule_id": "sgr-0b063fe55277efd8d",
            "self": false,
            "source_security_group_id": "sg-04e4ef7f72d37b19f",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3789762489",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09536079b6e54f9b5",
            "security_group_rule_id": "sgr-0a04d8e0de5414f3e",
            "self": false,
            "source_security_group_id": "sg-04e4ef7f72d37b19f",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-702484867",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09536079b6e54f9b5",
            "security_group_rule_id": "sgr-03b0f33aef6d13797",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2598831303",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09536079b6e54f9b5",
            "security_group_rule_id": "sgr-0e286d16f388b0b48",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1052288808",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-09536079b6e54f9b5",
            "security_group_rule_id": "sgr-0d3f7fb128d3d4ae4",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.retail_app_eks.aws_security_group.cluster",
            "module.retail_app_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:596507588379:network-acl/acl-0f6d0922cca31eb4a",
            "default_network_acl_id": "acl-0f6d0922cca31eb4a",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0f6d0922cca31eb4a",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "596507588379",
            "subnet_ids": [
              "subnet-031e9120e703397ce",
              "subnet-036064752d1ac8e04",
              "subnet-04b9ea603685836a2",
              "subnet-07a007d5ecb1013e0",
              "subnet-097656737ae09a394",
              "subnet-0991c61833f0700fb"
            ],
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-11-20",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-default-nacl",
              "Owner": "AIDAYVYU7O4NYCHHW6IKK",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-11-20",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-default-nacl",
              "Owner": "AIDAYVYU7O4NYCHHW6IKK",
              "Project": "retail-store"
            },
            "vpc_id": "vpc-0db20fc11bd80e840"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:596507588379:route-table/rtb-01950a653a330267f",
            "default_route_table_id": "rtb-01950a653a330267f",
            "id": "rtb-01950a653a330267f",
            "owner_id": "596507588379",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-11-20",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-default-rt",
              "Owner": "AIDAYVYU7O4NYCHHW6IKK",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-11-20",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-default-rt",
              "Owner": "AIDAYVYU7O4NYCHHW6IKK",
              "Project": "retail-store"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0db20fc11bd80e840"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:596507588379:security-group/sg-0126767e252660d46",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0126767e252660d46",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "596507588379",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-11-20",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-default-sg",
              "Owner": "AIDAYVYU7O4NYCHHW6IKK",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-11-20",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-default-sg",
              "Owner": "AIDAYVYU7O4NYCHHW6IKK",
              "Project": "retail-store"
            },
            "vpc_id": "vpc-0db20fc11bd80e840"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-041a9eb90eda9316d",
            "arn": "arn:aws:ec2:us-west-2:596507588379:elastic-ip/eipalloc-041a9eb90eda9316d",
            "association_id": "eipassoc-027df9fd2633bc373",
            "domain": "vpc",
            "id": "eipalloc-041a9eb90eda9316d",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0ceadbfe59d28714b",
            "private_dns": "ip-10-0-0-219.us-west-2.compute.internal",
            "private_ip": "10.0.0.219",
            "public_dns": "ec2-44-240-7-111.us-west-2.compute.amazonaws.com",
            "public_ip": "44.240.7.111",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-11-20",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-us-west-2a",
              "Owner": "AIDAYVYU7O4NYCHHW6IKK",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-11-20",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-us-west-2a",
              "Owner": "AIDAYVYU7O4NYCHHW6IKK",
              "Project": "retail-store"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:596507588379:internet-gateway/igw-0f0eda0270aae1d20",
            "id": "igw-0f0eda0270aae1d20",
            "owner_id": "596507588379",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-11-20",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc",
              "Owner": "AIDAYVYU7O4NYCHHW6IKK",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-11-20",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc",
              "Owner": "AIDAYVYU7O4NYCHHW6IKK",
              "Project": "retail-store"
            },
            "vpc_id": "vpc-0db20fc11bd80e840"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-041a9eb90eda9316d",
            "association_id": "eipassoc-027df9fd2633bc373",
            "connectivity_type": "public",
            "id": "nat-008bb08c19a4d4eda",
            "network_interface_id": "eni-0ceadbfe59d28714b",
            "private_ip": "10.0.0.219",
            "public_ip": "44.240.7.111",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-031e9120e703397ce",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-11-20",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-us-west-2a",
              "Owner": "AIDAYVYU7O4NYCHHW6IKK",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-11-20",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-us-west-2a",
              "Owner": "AIDAYVYU7O4NYCHHW6IKK",
              "Project": "retail-store"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a093e5940caa09ce1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-008bb08c19a4d4eda",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a093e5940caa09ce",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f0eda0270aae1d20",
            "id": "r-rtb-066f806c5546c61db1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-066f806c5546c61db",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:596507588379:route-table/rtb-0a093e5940caa09ce",
            "id": "rtb-0a093e5940caa09ce",
            "owner_id": "596507588379",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-008bb08c19a4d4eda",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-11-20",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-private",
              "Owner": "AIDAYVYU7O4NYCHHW6IKK",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-11-20",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-private",
              "Owner": "AIDAYVYU7O4NYCHHW6IKK",
              "Project": "retail-store"
            },
            "timeouts": null,
            "vpc_id": "vpc-0db20fc11bd80e840"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:596507588379:route-table/rtb-066f806c5546c61db",
            "id": "rtb-066f806c5546c61db",
            "owner_id": "596507588379",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f0eda0270aae1d20",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-11-20",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-public",
              "Owner": "AIDAYVYU7O4NYCHHW6IKK",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-11-20",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-public",
              "Owner": "AIDAYVYU7O4NYCHHW6IKK",
              "Project": "retail-store"
            },
            "timeouts": null,
            "vpc_id": "vpc-0db20fc11bd80e840"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015bef0de6a39b30a",
            "route_table_id": "rtb-0a093e5940caa09ce",
            "subnet_id": "subnet-097656737ae09a394"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0363ea6c140fb16c8",
            "route_table_id": "rtb-0a093e5940caa09ce",
            "subnet_id": "subnet-07a007d5ecb1013e0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0290365b20084fc0d",
            "route_table_id": "rtb-0a093e5940caa09ce",
            "subnet_id": "subnet-036064752d1ac8e04"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cbdd33e3fd3b35cd",
            "route_table_id": "rtb-066f806c5546c61db",
            "subnet_id": "subnet-031e9120e703397ce"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07555fdcc6f802c82",
            "route_table_id": "rtb-066f806c5546c61db",
            "subnet_id": "subnet-04b9ea603685836a2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db840503543594b7",
            "route_table_id": "rtb-066f806c5546c61db",
            "subnet_id": "subnet-0991c61833f0700fb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:596507588379:subnet/subnet-097656737ae09a394",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097656737ae09a394",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "596507588379",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-11-20",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-private-us-west-2a",
              "Owner": "AIDAYVYU7O4NYCHHW6IKK",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-bfkv": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-11-20",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-private-us-west-2a",
              "Owner": "AIDAYVYU7O4NYCHHW6IKK",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-bfkv": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0db20fc11bd80e840"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:596507588379:subnet/subnet-07a007d5ecb1013e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a007d5ecb1013e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "596507588379",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-11-20",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-private-us-west-2b",
              "Owner": "AIDAYVYU7O4NYCHHW6IKK",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-bfkv": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-11-20",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-private-us-west-2b",
              "Owner": "AIDAYVYU7O4NYCHHW6IKK",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-bfkv": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0db20fc11bd80e840"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:596507588379:subnet/subnet-036064752d1ac8e04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036064752d1ac8e04",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "596507588379",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-11-20",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-private-us-west-2c",
              "Owner": "AIDAYVYU7O4NYCHHW6IKK",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-bfkv": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-11-20",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-private-us-west-2c",
              "Owner": "AIDAYVYU7O4NYCHHW6IKK",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-bfkv": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0db20fc11bd80e840"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:596507588379:subnet/subnet-031e9120e703397ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031e9120e703397ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "596507588379",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-11-20",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-public-us-west-2a",
              "Owner": "AIDAYVYU7O4NYCHHW6IKK",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-bfkv": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-11-20",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-public-us-west-2a",
              "Owner": "AIDAYVYU7O4NYCHHW6IKK",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-bfkv": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0db20fc11bd80e840"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:596507588379:subnet/subnet-04b9ea603685836a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b9ea603685836a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "596507588379",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-11-20",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-public-us-west-2b",
              "Owner": "AIDAYVYU7O4NYCHHW6IKK",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-bfkv": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-11-20",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-public-us-west-2b",
              "Owner": "AIDAYVYU7O4NYCHHW6IKK",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-bfkv": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0db20fc11bd80e840"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:596507588379:subnet/subnet-0991c61833f0700fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0991c61833f0700fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "596507588379",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-11-20",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-public-us-west-2c",
              "Owner": "AIDAYVYU7O4NYCHHW6IKK",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-bfkv": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-11-20",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc-public-us-west-2c",
              "Owner": "AIDAYVYU7O4NYCHHW6IKK",
              "Project": "retail-store",
              "kubernetes.io/cluster/retail-store-bfkv": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0db20fc11bd80e840"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:596507588379:vpc/vpc-0db20fc11bd80e840",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f6d0922cca31eb4a",
            "default_route_table_id": "rtb-01950a653a330267f",
            "default_security_group_id": "sg-0126767e252660d46",
            "dhcp_options_id": "dopt-04fb47726ce0ca4fb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0db20fc11bd80e840",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01950a653a330267f",
            "owner_id": "596507588379",
            "tags": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-11-20",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc",
              "Owner": "AIDAYVYU7O4NYCHHW6IKK",
              "Project": "retail-store"
            },
            "tags_all": {
              "CreatedBy": "TrainWithShubhamCommunity",
              "CreatedDate": "2025-11-20",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "retail-store-vpc",
              "Owner": "AIDAYVYU7O4NYCHHW6IKK",
              "Project": "retail-store"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_caller_identity.current"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}